# Programming-C

./: README.md
git_lab/: file2.txt  report.docx  sort.c
laba1/: task2.c  task3.c
laba10/: main.c  program  triangle.c  triangle.h
laba11/: task1  task1-1  task1-1.c  task1.c  task2  task2-2  task2-2.c  task2.c  task3  task3-3  task3-3.c  task3.c  task4  task4-4  task4-4.c  task4.c
laba12/task0/: Makefile
laba12/task0/app/: main.c
laba12/task1/: CMakeLists.txt
laba12/task1/background/: CMakeLists.txt
laba12/task1/pipes/: CMakeLists.txt
laba2/: task1.c  task15.c  task17.c  task2.c
laba3/: task16.c
laba4/: task15.c
laba5/: task15.c  task16.c
laba6/: task1  task1.c
laba7/: task1.c
laba8/: task1  task1.c
laba9/: task1  task1.c
